# cyoa-rs

./: Cargo.toml  README.md  aaa
cyoa/: Cargo.toml
examples/: example-config.txt
examples/basic-game/: Cargo.toml
examples/basic-game/assets/: game.json
examples/basic-game/src/: main.rs
src/: datastruct.rs  fileutils.rs  lib.rs
