[package]
name = "cyoa"
version = "0.1.0"
authors = ["Sambhav Saggi <17993169+sambhavsaggi@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
signal-hook = "0.3.8"
libc = "0.2.94"
structopt = "0.3.21"
